Make a few sections with actions and main information about company

--- a/index.html
+++ b/index.html
@@ -360,64 +360,47 @@
       <section class="actions">
         <div class="container">
           <div class="actions__top">
-            <h2>Актуальные акции</h2>
-            <a href="">Все акции <span>></span></a>
+            <h2 class="actions__top__heading">Актуальные акции</h2>
+            <a class="actions__top__link button button--cta button--darkblue" href="">Все акции ></a>
           </div>
           <div class="actions__bottom">
-            <div class="actions__list actions__list--desktop">
-              <div class="actions__list__item">
+
+              <div class="actions__list__item" style="grid-area: box1">
                 <img class="actions__list__item__img" src="./assets/images/stock_1.png" alt="" />
-                <p class="actions__list__item__text">Акция действует до 11.11.2023</p>
+                <p class="actions__list__item__period">Акция действует до 11.11.2023</p>
                 <h3 class="actions__list__item__heading">Скидка 15% на все смесители</h3>
                 <p class="actions__list__item__text">
                   Предлагаем смесители для кухни, ванны, душа по низким ценам!
                   Акция действует только на товары в наличии.
                 </p>
-                <a class="actions__list__item__link" href="">Подробнее <span>></span></a>
+                <a class="actions__list__item__link" href="">Подробнее ></a>
               </div>
-              <div class="actions__list__item">
-                <img src="./assets/images/stock_2.png" alt="" />
-                <p>Акция действует до 30.11.2023</p>
-                <h3>
+
+              <div class="actions__list__item" style="grid-area: box2">
+                <img class="actions__list__item__img" src="./assets/images/stock_2.png" alt="" />
+                <p class="actions__list__item__period">Акция действует до 30.11.2023</p>
+                <h3 class="actions__list__item__heading">
                   Осенняя распродажа сантехнических аксессуаров для ванной
                   комнаты
                 </h3>
-                <p>
+                <p class="actions__list__item__text">
                   Большой выбор аксессуаров для ванной со скидками до 40%.
                   Товары со скидкой отмечены в каталоге красной табличкой SALE.
                 </p>
-                <a href="">Подробнее <span>></span></a>
+                <a class="actions__list__item__link" href="">Подробнее ></a>
               </div>
-              <div class="actions__list__item">
-                <img src="./assets/images/stock_3.png" alt="" />
-                <p>Акция действует до 31.12.2023</p>
-                <h3>Душевые системы по выгодным ценам!</h3>
-                <p>
+
+              <div class="actions__list__item" style="grid-area: box3">
+                <img class="actions__list__item__img" src="./assets/images/stock_3.png" alt="" />
+                <p class="actions__list__item__period">Акция действует до 31.12.2023</p>
+                <h3 class="actions__list__item__heading">Душевые системы по выгодным ценам!</h3>
+                <p class="actions__list__item__text">
                   Душевые системы, стойки и гарнитуры по выгодным ценам.
                   Доставка в любой регион России. Гарантия от производителя.
                 </p>
-                <a href="">Подробнее <span>></span></a>
+                <a class="actions__list__item__link" href="">Подробнее ></a>
               </div>
-            </div>
-            <div class="actions__list actions__list--mobile">
-              <div class="container">
-                <div class="swiper actions__list__mob__slider">
-                  <div class="swiper-wrapper">
-                    <div class="actions__list__item swiper-slide">
-                      <img class="actions__list__item__img" src="./assets/images/stock_1.png" alt="" />
-                      <p class="actions__list__item__text">Акция действует до 11.11.2023</p>
-                      <h3 class="actions__list__item__heading">Скидка 15% на все смесители</h3>
-                      <p class="actions__list__item__text">
-                        Предлагаем смесители для кухни, ванны, душа по низким ценам!
-                        Акция действует только на товары в наличии.
-                      </p>
-                      <a class="actions__list__item__link" href="">Подробнее <span>></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+            </div> 
         </div>
       </section>
 
@@ -425,38 +408,30 @@
         <div class="container">
           <div class="about__left">
             <div class="about__img">
-              <img src="./assets/images/engineer.png" alt="" />
-              <img src="./assets/images/office.png" alt="" />
+              <img class="about__img__engie" src="./assets/images/engineer.png" alt="" />
+              <img class="about__img__office" src="./assets/images/office.png" alt="" />
             </div>
           </div>
           <div class="about__right">
-            <h2>О компании</h2>
-            <p class="about__text">
+            <h2 class="about__right__top__heading">О компании</h2>
+            <p class="about__right__top__text">
               Компания DEMM, созданная в Марментино, провинция Брешиа, работает
               в сфере производства кранов и ванных комнат в течение последних
               50 лет. Компания DEMM постоянно инвестирует в исследования
               и разработку новых продуктов с целью обеспечения максимальной
               эффективности при одновременном обеспечении качества и дизайна.
             </p>
-            <div class="about__img about__img--tablet">
-              <img src="./assets/images/engineer.png" alt="" />
-              <img src="./assets/images/office.png" alt="" />
-            </div>
-            <p class="about__guarantee">
-              <strong
-                >"Гарантируем высочайшую безопасность и надёжность в
-                соответствии с международными стандартами качества"</strong
-              >
+            <p class="about__right__bottom__guarantee">
+              Гарантируем высочайшую безопасность и надёжность в
+              соответствии с международными стандартами качества            
             </p>
-            <div class="about__bottom">
-              <p class="about__text">
+            <p class="about__right__bottom__text">
                 Мы производим обширную коллекцию изысканных и современных
                 смесителей и душевых кабин. Изготавливаем продукцию в очень
                 короткие сроки. Мы динамичны, дружелюбны и всегда рады
                 сотрудничеству!
-              </p>
-              <a href="">Подробнее <span>></span></a>
-            </div>
+            </p>
+            <a class="about__right__bottom__link button button--cta button--darkblue" href="">Подробнее ></a>            
           </div>
         </div>
       </section>
