--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
           <div class="categories__item categories__item--square" style="grid-area: box1">
             <img class="categories__item__img" src="./assets/images/sinks.png" alt="" />
-            <div class="categories__item__content--square">              
+            <div class="categories__item__content">
               <h3 class="categories__item__h">Смесители</h3>
               <a class="categories__item__link" href="">
                 <svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -304,10 +304,10 @@
             </div>
           </div>
 
-          
+
           <div class="categories__item categories__item--rectangle" style="grid-area: box2">
             <img class="categories__item__img" src="./assets/images/shower_systems.png" alt="" />
-            <div class="categories__item__content--rectangle">              
+            <div class="categories__item__content">
               <h3 class="categories__item__h">Душевые системы</h3>
               <a class="categories__item__link" href="">
                 <svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -319,7 +319,7 @@
 
           <div class="categories__item categories__item--rectangle" style="grid-area: box3">
             <img class="categories__item__img" src="./assets/images/spout.png" alt="" />
-            <div class="categories__item__content--rectangle">              
+            <div class="categories__item__content">
               <h3 class="categories__item__h">Изливы</h3>
               <a class="categories__item__link" href="">
                 <svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -331,7 +331,7 @@
 
           <div class="categories__item categories__item--square" style="grid-area: box4">
             <img class="categories__item__img" src="./assets/images/accessories.png" alt="" />
-            <div class="categories__item__content--square">              
+            <div class="categories__item__content">              
               <h3 class="categories__item__h">Аксессуары</h3>
               <a class="categories__item__link" href="">
                 <svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -342,10 +342,10 @@
           </div>
 
           <div class="categories__item categories__item--BIG" style="grid-area: box5">
-            <img class="categories__item__img--BIG" src="./assets/images/shower_racks.png" alt="" />
-            <div class="categories__item__content--BIG">              
-              <h3 class="categories__item__h--BIG">Душевые стойки</h3>
-              <a class="categories__item__link--BIG" href="">
+            <img class="categories__item__img" src="./assets/images/shower_racks.png" alt="" />
+            <div class="categories__item__content">              
+              <h3 class="categories__item__h">Душевые стойки</h3>
+              <a class="categories__item__link" href="">
                 <svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 1L3.85858 3.85858C3.93668 3.93668 3.93668 4.06332 3.85858 4.14142L1 7" stroke="#C6BCB2" stroke-width="1.5" stroke-linecap="round"/>
                 </svg>
@@ -365,40 +365,40 @@
           </div>
           <div class="actions__bottom">
 
-              <div class="actions__list__item" style="grid-area: box1">
-                <img class="actions__list__item__img" src="./assets/images/stock_1.png" alt="" />
-                <p class="actions__list__item__period">Акция действует до 11.11.2023</p>
-                <h3 class="actions__list__item__heading">Скидка 15% на все смесители</h3>
-                <p class="actions__list__item__text">
+              <div class="actions__bottom__item" style="grid-area: box1">
+                <img class="actions__bottom__item__img" src="./assets/images/stock_1.png" alt="" />
+                <p class="actions__bottom__item__period">Акция действует до 11.11.2023</p>
+                <h3 class="actions__bottom__item__heading">Скидка 15% на все смесители</h3>
+                <p class="actions__bottom__item__text">
                   Предлагаем смесители для кухни, ванны, душа по низким ценам!
                   Акция действует только на товары в наличии.
                 </p>
                 <a class="actions__list__item__link" href="">Подробнее ></a>
               </div>
 
-              <div class="actions__list__item" style="grid-area: box2">
-                <img class="actions__list__item__img" src="./assets/images/stock_2.png" alt="" />
-                <p class="actions__list__item__period">Акция действует до 30.11.2023</p>
-                <h3 class="actions__list__item__heading">
+              <div class="actions__bottom__item" style="grid-area: box2">
+                <img class="actions__bottom__item__img" src="./assets/images/stock_2.png" alt="" />
+                <p class="actions__bottom__item__period">Акция действует до 30.11.2023</p>
+                <h3 class="actions__bottom__item__heading">
                   Осенняя распродажа сантехнических аксессуаров для ванной
                   комнаты
                 </h3>
-                <p class="actions__list__item__text">
+                <p class="actions__bottom__item__text">
                   Большой выбор аксессуаров для ванной со скидками до 40%.
                   Товары со скидкой отмечены в каталоге красной табличкой SALE.
                 </p>
-                <a class="actions__list__item__link" href="">Подробнее ></a>
+                <a class="actions__bottom__item__link" href="">Подробнее ></a>
               </div>
 
-              <div class="actions__list__item" style="grid-area: box3">
-                <img class="actions__list__item__img" src="./assets/images/stock_3.png" alt="" />
-                <p class="actions__list__item__period">Акция действует до 31.12.2023</p>
-                <h3 class="actions__list__item__heading">Душевые системы по выгодным ценам!</h3>
-                <p class="actions__list__item__text">
+              <div class="actions__bottom__item" style="grid-area: box3">
+                <img class="actions__bottom__item__img" src="./assets/images/stock_3.png" alt="" />
+                <p class="actions__bottom__item__period">Акция действует до 31.12.2023</p>
+                <h3 class="actions__bottom__item__heading">Душевые системы по выгодным ценам!</h3>
+                <p class="actions__bottom__item__text">
                   Душевые системы, стойки и гарнитуры по выгодным ценам.
                   Доставка в любой регион России. Гарантия от производителя.
                 </p>
-                <a class="actions__list__item__link" href="">Подробнее ></a>
+                <a class="actions__bottom__item__link" href="">Подробнее ></a>
               </div>
             </div> 
         </div>
@@ -421,17 +421,20 @@
               и разработку новых продуктов с целью обеспечения максимальной
               эффективности при одновременном обеспечении качества и дизайна.
             </p>
+            <!-- TODO: добавить блок с изображениями для таблетки и мобилки -->
             <p class="about__right__bottom__guarantee">
               Гарантируем высочайшую безопасность и надёжность в
               соответствии с международными стандартами качества            
             </p>
-            <p class="about__right__bottom__text">
-                Мы производим обширную коллекцию изысканных и современных
-                смесителей и душевых кабин. Изготавливаем продукцию в очень
-                короткие сроки. Мы динамичны, дружелюбны и всегда рады
-                сотрудничеству!
-            </p>
-            <a class="about__right__bottom__link button button--cta button--darkblue" href="">Подробнее ></a>            
+            <div class="about__right__links">
+              <p class="about__right__bottom__text">
+                  Мы производим обширную коллекцию изысканных и современных
+                  смесителей и душевых кабин. Изготавливаем продукцию в очень
+                  короткие сроки. Мы динамичны, дружелюбны и всегда рады
+                  сотрудничеству!
+              </p>
+              <a class="about__right__bottom__link button button--cta button--darkblue" href="">Подробнее ></a>            
+            </div>
           </div>
         </div>
       </section>
@@ -453,7 +456,7 @@
               Заполните форму, мы свяжемся с вами в ближайшее время, ответим на
               все вопросы и предоставим консультацию по ассортименту.
             </p>
-            <form action="" method="post" id="contactForm">
+            <form action="" method="post" class="contact__form" id="contactForm">
               <div class="form-group contact__info__customer">
                 <div class="form-group contact__info__name">
                   <label for="name"></label>
@@ -478,7 +481,9 @@
       <div class="footer__top">
         <div class="container">
           <div class="footer__top__left">
-            <img class="footer__top__logo" src="./assets/images/logo.png" alt="" />
+            <a class="footer__top__logo" href="/">
+              <img src="./assets/images/logo.png" alt="" />
+            </a>
             <a href="" class="footer__whatsapp">
               <svg
                 width="20"
@@ -496,8 +501,8 @@
             </a>
           </div>
 
-          <div class="footer__top__middle__one">
-            <p class="footer__top__middle__p">КАТАЛОГ</p>
+          <div class="footer__top__middle">
+            <p class="footer__top__middle__paragraph">КАТАЛОГ</p>
             <ul class="footer__top__middle__list">
               <li><a href="">Смесители</a></li>
               <li><a href="">Душевые системы</a></li>
@@ -507,8 +512,8 @@
             </ul>
           </div>
 
-          <div class="footer__top__middle__two">
-            <p class="footer__top__middle__p">ДЛЯ КЛИЕНТА</p>
+          <div class="footer__top__middle">
+            <p>ДЛЯ КЛИЕНТА</p>
             <ul class="footer__top__middle__list">
               <li><a href="">Акции</a></li>
               <li><a href="">О компании</a></li>
@@ -519,7 +524,7 @@
           </div>
 
           <div class="footer__top__right">
-            <p class="footer__top__right__p">
+            <p class="footer__top__right__paragraph">
               Узнавайте об акциях и новостях первыми, подпишитесь на рассылку
             </p>
             <div class="footer__form">
@@ -548,14 +553,14 @@
                 </svg>
                 г. Новосибирск, улица, дом, офис
               </address>
-              </div>               
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="footer__bottom">
         <div class="container">
-          <p class="footer__bottom__p">© DEMM RUBINETTERIA 2023</p>
+          <p class="footer__bottom__paragraph">© DEMM RUBINETTERIA 2023</p>
           <a class="footer__bottom__link" href="">Договор оферты</a>
           <a class="footer__bottom__link" href="">Пользовательское соглашение</a>
         </div>
